--- a/src/css/main.css
+++ b/src/css/main.css
@@ -91,13 +91,17 @@ h4 {
   background: #faf0ca;
 }
 /* 02. Centrer horizontalement */
-
+.calltoaction-container {
+  display: flex;
+  justify-content: center;
+}
 .calltoaction {
   margin-bottom: 15px;
   padding: 15px 30px;
   background: #fdf0d5;
   border: 1px solid #c1121f;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .link {
@@ -107,6 +111,8 @@ h4 {
   color: #fdf0d5;
   font-family: "Libre Baskerville";
   text-transform: uppercase;
+  text-align: center;
+  margin-left: 210;
 }
 
 /* 03. Centrer verticalement */
@@ -118,6 +124,8 @@ h4 {
   padding: 20px;
   border-radius: 10px;
   background: #669bbc;
+  display: flex;
+  align-items: center;
 }
 
 .button {
@@ -126,6 +134,7 @@ h4 {
   background: #780000;
   color: #fdf0d5;
   text-align: center;
+  padding: 20px 0;
 }
 
 /* 04. Intégration */
